--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.11.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
